# CppSandbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: ClangTidy.cmake  ProjectSettings.cmake
src/App/: CMakeLists.txt  Main.cpp
src/App/include/: Main.h
src/Common/: CMakeLists.txt  Common.cpp  Testing.cpp
src/Common/include/: Common.h  Testing.h
toolchains/: clang-toolchain.cmake  windows-wsl2-clang.cmake
vcpkg/triplets/: x64-windows-dynamic-custom.cmake  x64-windows-static-custom.cmake
